# qwen-ops

./: README.md  go.mod  qwen-ops
cmd/: download.go  main.go  mtp.go  patches.go  serve.go  status.go
deploy/gh200/: 01-SERVER-STATUS.md  07-FRESH-INSTALL.md  08-GH200-AGENT-INSTALL.md  deploy.sh
deploy/rtx5090/: 05-NIXOS-GUIDE.md  nixos-captain-configuration.nix  vllm-serve.sh  vllm-watchdog.sh
llamacpp/infrastructure/: 00-base.txt  0000-base-feat-memory-recurrent-state-snapshot-restore-for-D.patch  0001-base-feat-qwen3next-MTP-NextN-head-graph-builder-load-p.patch  0002-base-feat-speculative-add-MTP-single-model-speculative-.patch  0003-base-integrate-wire-rollback-snapshot-restore-into-mtp-.patch  0004-base-integrate-wire-llama_mtp_draft-execution-path.patch  01-feat-mtp-execute-MTP-draft-graph-for-qwen3next-via.patch  02-qwen35-add-MTP-draft-graph-path-mirroring-qwen3nex.patch  03-fix-mtp-end-to-end-MTP-head-load-execute-for-qwen3.patch  04-diag-mtp-name-mask-tensors-to-surface-ggml-schedul.patch  05-fix-mtp-correctly-chain-prev_hidden-across-K-draft.patch  06-fix-mtp-isolate-mtp_graph_compute-in-a-private-ggm.patch  07-feat-mtp-v1-host-side-rollback-on-rejection-via-sn.patch  08-feat-mtp-AR-re-decode-path-for-rollback-MTP_FORCE_.patch  (+3 more)
mlx/: __init__.py  extract_weights.py  fused_kernels_t2.py  generate.py  mtp_head.py  pyproject.toml
training/: build_training_data.py  train_per_position_heads.py
validation/: bench_v7.py  diagnose_divergence.py  extract_mtp_huihui.py  fused_gdn.py  test_partial_skip.py  validate_draft_accuracy.py  validate_extended.py
(+48 files in other folders)
